--- a/managed/src/main/resources/application.conf
+++ b/managed/src/main/resources/application.conf
@@ -60,6 +60,8 @@ yb {
   aws.default_volume_size_gb = 100
   gcp.default_volume_size_gb = 100
   azure.default_volume_size_gb = 100
+
+  runtime_conf_ui.tag_filter = ["PUBLIC","BETA","INTERNAL","UIDriven","YBM"]
 }
 
 ybc {
