--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -596,6 +596,12 @@ yb {
     }
   }
 
+  snapshot_creation {
+    # Config for attempts and delays for snapshot creation
+    max_attempts = 80
+    delay = 15
+  }
+
   support_bundle {
     # default N days of logs to get if no dates specified
     default_date_range = 7
