[PLAT-8013] YCQL health check failures for Auth enabled cases
Summary: - Removed the extra `.` which was causing the string match for Auth enabled failure message to not match with node_health.py script message.

Test Plan: - Verified health check succeeded with new file

Reviewers: amalyshev

Reviewed By: amalyshev

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24136

--- a/managed/src/main/resources/health/node_health.py.template
+++ b/managed/src/main/resources/health/node_health.py.template
@@ -1154,7 +1154,7 @@ class NodeChecker():
         errors = []
         if not ('Connected to local cluster at {}:{}'
                 .format(self.node, self.ycql_port) in output or
-                "AuthenticationFailed('Remote end requires authentication.'" in output):
+                "AuthenticationFailed('Remote end requires authentication'" in output):
             errors = [output]
 
         has_errors = len(errors) > 0
