[BACKPORT 2.17.3][PLAT-8041] yba installer upgrade not finding installed version
Summary:
Original commit: 3caca70893 / D24187
YBA Installer was not looking for the version_metadata.json in
the correct location before running an upgrade.

Also, cleaned up some bad text and a state error on upgrade

Test Plan: installed -> upgrade using yba-ctl

Reviewers: sanketh, muthu

Reviewed By: muthu

Subscribers: muthu, sanketh, yugaware, jenkins-bot

Differential Revision: https://phabricator.dev.yugabyte.com/D24319

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -83,6 +83,12 @@ yb {
   thirdparty.packagePath = /opt/third-party
   grafana.accessKey="changeme"
 
+  regex {
+    release_pattern {
+      ybdb = "[^.]+yugabyte-(?:ee-)?(.*)-(alma|centos|linux|el8|darwin)(.*).tar.gz"
+      helm = "[^.]+yugabyte-(.*)-helm.tar.gz"
+    }
+  }
   docker {
     network = "bridge"
     release = ""
