[PLAT-8029] yba-installer creates directories with correct ownership.
Summary:
the platform install of yba installer will now create and chown directories
if they get created. This is to handle the case where an upgrade creates
a new directory, so we can ensure it gets correctly owned
by the yugabyte user. We also do not want to always do the
chown, as already existing directories should be setup correctly,
and we don't want to handle changes the platform may have
made during its own runtime

Test Plan: install -> upgrade and ensure all directories are owned correctly

Reviewers: muthu, sb-yb, sanketh

Reviewed By: muthu, sb-yb, sanketh

Subscribers: sb-yb, jenkins-bot, sanketh, muthu, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24187

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -108,6 +108,12 @@ yb {
   grafana.accessKey="changeme"
   allow_db_version_more_than_yba_version=false
 
+  regex {
+    release_pattern {
+      ybdb = "[^.]+yugabyte-(?:ee-)?(.*)-(alma|centos|linux|el8|darwin)(.*).tar.gz"
+      helm = "[^.]+yugabyte-(.*)-helm.tar.gz"
+    }
+  }
   docker {
     network = "bridge"
     release = ""
