[CLOUDGA-12738] Update OS pacakges during AMI build process
Summary: This runs a full set of package updates during the AMI build process for the custom AMI.

Test Plan: Will test the resulting AMI in devcloud

Reviewers: dskorobogaty, daniel, cdavid, vmallepalli

Reviewed By: cdavid, vmallepalli

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24137

--- a/managed/devops/yb_custom_ami_builder.yml
+++ b/managed/devops/yb_custom_ami_builder.yml
@@ -5,6 +5,11 @@
   vars:
     yb_ansible_host: "default"
 
+- name: "Install OS updates and desired packages"
+  import_playbook: yb_os_package_updates.yml
+  vars:
+    yb_ansible_host: "default"
+
 - name: "Use custom ssh port"
   import_playbook: use_custom_ssh_port.yml
   vars:
