[#15749] docdb: Delay rocksdb gauge metrics update to end of request
Summary:
This diff changes rocksdb gauge metrics to only be updated once per read request, rather than immediately, by collecting updates in a thread-local buffer of integers rather than incrementing the atomic gauges directly, in order to avoid contention while updating metrics.

Running `SELECT COUNT(*) FROM table` queries on a 10 million row, single tablet table on a RF=1 c5.4xlarge universe,

Before this diff:
- 1 query at a time: 8423.11ms average
- 8 queries at a time: 16642.96ms average

After this diff:
- 1 query at a time: 8165.17ms average
- 8 queries at a time: 8689.16ms average

These changes are gated behind the newly added batch_tablet_metrics_update gflag, which is on by default.

Test Plan: Jenkins

Reviewers: amitanand, arybochkin

Reviewed By: arybochkin

Subscribers: smishra, bogdan, rthallam, ybase

Differential Revision: https://phabricator.dev.yugabyte.com/D22325

--- a/src/yb/docdb/CMakeLists.txt
+++ b/src/yb/docdb/CMakeLists.txt
@@ -84,6 +84,7 @@ set(DOCDB_SRCS
         docdb_debug.cc
         docdb_filter_policy.cc
         docdb_pgapi.cc
+        docdb_statistics.cc
         docdb_util.cc
         doc_ttl_util.cc
         docdb_compaction_context.cc
