[#15746] docdb: harden master leaderless tablet endpoint
Summary:
Currently, the leaderless tablet endpoint could have a high false negative rate, ie: there might be broken tablets in the cluster,
which are not reflected in the master's view. This is because practically, the master will only update it's view,
if quorums undergo any configuration changes. However to do that, they would need a majority of peers to be alive and able to replicate writes.
In the case of majority failures, complex network partitions, or bugs which stall replication, we would not be able to make progress on a change config,
leading to a broken quorum, but without reflecting this in the master's view.

The approach is to reflect the leader lease status of each tablet on the master UI.
Currently the tserver to master heartbeat doesn't have the information of leader lease status or what the leader lease is,
so to get it, also piggyback them on the tserver heartbeat metrics to regularly report leader status to the master.
With the information reported by the tserver, from the master UI (master-ip:7000/table?id=table-id),
in the RaftConfig column of each tablet, we can print the leader lease status and the lease along with the leader peer.

Then by checking master UI, we can tell (within 5 seconds) if a tablet:
1. has a leader.
2. has a valid lease.
3. if the lease expired.

Based on the information about leader lease status, we can change the behaviour of leaderless tablet endpoint:
we can also mark those tablets that have a leader but haven't a valid lease as leaderless.
To avoid the tablets that just have leader change to be false positive, we only mark those who haven't a valid lease in the past several heartbeats.
Introduced a new gflag `master_maximum_heartbeats_without_lease` as this number.

So,
* In happy path (normal cluster operations), minimize false positives -  no lease heartbeats takes care of this
* In really unhappy path (nodes down for long), minimize false negatives - report 

--- a/src/yb/yql/pgwrapper/CMakeLists.txt
+++ b/src/yb/yql/pgwrapper/CMakeLists.txt
@@ -44,6 +44,7 @@ add_dependencies(
   gen_src_yb_master_master_types_proto
   gen_src_yb_tserver_tserver_service_proto
   gen_src_yb_rpc_any_proto
+  gen_src_yb_consensus_consensus_types_proto
   )
 
 set(PQ_UTILS_SRCS
