--- a/src/yb/master/CMakeLists.txt
+++ b/src/yb/master/CMakeLists.txt
@@ -55,7 +55,8 @@ set(MASTER_YRPC_LIBS
   tablet_proto
   tserver_proto
   cdc_consumer_proto
-  xcluster_producer_proto)
+  xcluster_producer_proto
+  consensus_proto)
 ADD_YB_LIBRARY(master_proto
   SRCS ${MASTER_YRPC_SRCS}
   DEPS ${MASTER_YRPC_LIBS}
