--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -665,6 +665,7 @@ yb {
     pg_based = false
     disable_xxhash_checksum = false
     log.verbose = false
+    minIncrementalScheduleFrequencyInSecs = 900
   }
 
   logs {
