[BACKPORT 2.18][PLAT-8136]: Add a runtime flags to make the minimum incr backup schedule frequency configurable
Summary:
Added a runtime flags to make the minimum incr backup schedule frequency configurable and kept the default value to 15mins(900secs).
Original Diff/Commit: 27dec9dffa/D24259

Test Plan: Tested Manually

Reviewers: vpatibandla, vkumar

Reviewed By: vkumar

Subscribers: yugaware, jenkins-bot

Differential Revision: https://phabricator.dev.yugabyte.com/D24302

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -664,6 +664,7 @@ yb {
     pg_based = false
     disable_xxhash_checksum = false
     log.verbose = false
+    minIncrementalScheduleFrequencyInSecs = 900
   }
 
   logs {
