--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -54,6 +54,8 @@ db {
     driver="org.postgresql.Driver"
     url="jdbc:postgresql://"${db.default.host}":"${db.default.port}"/"${db.default.dbname}
     logStatements=true
+    pg_dump_path=""
+    pg_restore_path=""
     # Config about flyway migrations.
     migration {
       table=schema_version
