--- a/managed/yba-installer/config/templates/yba-installer-platform.yml
+++ b/managed/yba-installer/config/templates/yba-installer-platform.yml
@@ -26,6 +26,8 @@ services:
             host="{{ yamlPath "postgres.useExisting.host" }}"
             port="{{ yamlPath "postgres.useExisting.port" }}"
             dbname="yugaware"
+            pg_dump_path="{{ yamlPath "postgres.useExisting.pg_dump_path" }}"
+            pg_restore_path="{{ yamlPath "postgres.useExisting.pg_restore_path" }}"
             {{end}}
 
             {{if eq (yamlPath "postgres.install.enabled") "true" }}
@@ -34,6 +36,8 @@ services:
             host="localhost"
             port="{{ yamlPath "postgres.install.port" }}"
             dbname="yugaware"
+            pg_dump_path="{{ .PgBin }}/pg_dump"
+            pg_restore_path="{{ .PgBin }}/pg_restore"
             {{end}}
             username=${?DB_USERNAME}
             password=${?DB_PASSWORD}
@@ -79,6 +83,7 @@ services:
         health.check_interval_ms = 300000
         # Interval at which to send a status report email. Default: 12 hours.
         health.status_interval_ms = 43200000
+        installation = "yba-installer"
         # If SSO needs to be enabled on the platform.
         security.use_oauth = false
         security.use_oauth = "{{ yamlPath "platform.useOauth" }}"
