[BACKPORT 2.17.3][PLAT-7121] HA implementation for YBA-installer
Summary:
Adds support to Java, backup script, and yba-installer YBA config for HA support of YBA-installer
installations. Java code mimics a lot of the logic in backup.go to pass the right arguments to the
backup script. Some of the information necessary is pulled from the YBA config that is now updated
with flags to indicate installation type and pg_dump/restore paths for custom installations. Also
fixes some issues with backup script that interfere with normal backups.

Need to add ca_cert.pem of standby instance to the active instance peer certificates.

Original Commit: D24211 / 13acb83559635783579c96f2fb0d118cdc335b95

Test Plan:
Setup HA with two YBA-installer platforms.
Same with custom postgres.

Reviewers: sb-yb, dshubin, sanketh

Reviewed By: sanketh

Subscribers: yugaware, jenkins-bot

Differential Revision: https://phabricator.dev.yugabyte.com/D24293

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -39,6 +39,8 @@ db {
     driver="org.postgresql.Driver"
     url="jdbc:postgresql://"${db.default.host}":"${db.default.port}"/"${db.default.dbname}
     logStatements=true
+    pg_dump_path=""
+    pg_restore_path=""
     # Config about flyway migrations.
     migration {
       initOnMigrate=true
