[#16805] DocDB: Split PgMiniTest into smaller ones
Summary:
pg_mini-test.cc became too big (3k+ lines).
This diff extract the following test from it:
1) pg_master_failover-test.cc - tests related to master failover, that use 3 masters.
2) pg_row_lock-test.cc - tests related to row lock functionality.
3) pg_single_tserver-test.cc - tests that uses single tserver in conjunction with postgres.

Test Plan: Jenkins

Reviewers: dmitry

Reviewed By: dmitry

Subscribers: ybase

Differential Revision: https://phabricator.dev.yugabyte.com/D24310

--- a/src/yb/yql/pgwrapper/CMakeLists.txt
+++ b/src/yb/yql/pgwrapper/CMakeLists.txt
@@ -103,10 +103,13 @@ ADD_YB_TEST(pg_index_backfill-test)
 ADD_YB_TEST(pg_libpq-test)
 ADD_YB_TEST(pg_libpq_err-test)
 ADD_YB_TEST(pg_load_balancer-test)
+ADD_YB_TEST(pg_master_failover-test)
 ADD_YB_TEST(pg_mini-test)
 ADD_YB_TEST(pg_on_conflict-test)
 ADD_YB_TEST(pg_op_buffering-test)
 ADD_YB_TEST(pg_packed_row-test)
+ADD_YB_TEST(pg_single_tserver-test)
+ADD_YB_TEST(pg_row_lock-test)
 ADD_YB_TEST(pg_wait_on_conflict-test)
 ADD_YB_TEST(pg_table_size-test)
 ADD_YB_TEST(pg_tablet_split-test)
