Patched to put kubernetes operator behind config
Summary: Patch to put kubernetes operator behind config

Test Plan: Manual testing

Reviewers: sanketh, hzare

Reviewed By: hzare

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24328

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -107,6 +107,7 @@ yb {
   thirdparty.packagePath = /opt/third-party
   grafana.accessKey="changeme"
   allow_db_version_more_than_yba_version=false
+  kubernetesOperator.enabled=false
 
   regex {
     release_pattern {
