[PLAT-8346] Resize Node fails on a restart/retry due to masked gflags
Summary:
Retry task with some parameter from earlier task failure having a sensitive field will fail.
This is because the field in the task info table gets wrongly populated with the masked field. We now change it to only log with the masked field, but keep storing the task details as is in the DB.

This diff fixes the bug introduced from https://phabricator.dev.yugabyte.com/D18546.

Test Plan:
Run UTs.
Run itests.
Manually tested.

Reviewers: sanketh, nsingh

Reviewed By: nsingh

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24376

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -952,6 +952,8 @@ runtime_config {
     "yb.metrics.ui.topk.enable",
     "yb.support_bundle.k8s_enabled",
     "yb.support_bundle.onprem_enabled",
+    "yb.support_bundle.universe_logs_regex_pattern",
+    "yb.support_bundle.postgres_logs_regex_pattern",
     "yb.internal.allow_unsupported_instances",
     "yb.universe_version_check_mode",
     "yb.task.override_force_universe_lock",
