--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -137,6 +137,7 @@ yb {
   provider {
     skip_keypair_validation = false
     validate_ntp_server_count = 1
+    allow_used_provider_edit = ${yb.cloud.enabled}
   }
 
   universe {
