--- a/managed/yba-installer/config/templates/yba-installer-platform.yml
+++ b/managed/yba-installer/config/templates/yba-installer-platform.yml
@@ -163,7 +163,7 @@ services:
       Group={{ yamlPath "service_username" }}
       Type=simple
 
-      Environment="JAVA_HOME={{ installVersionDir }}/jdk8u345-b01"
+      Environment="JAVA_HOME={{ installVersionDir }}/jdk8u362-b09/"
       Environment="YB_OIDC_SECRET={{ yamlPath "platform.ybOidcSecret" }}"
       Environment="PLATFORM_APP_SECRET={{ yamlPath "platform.appSecret" }}"
 
