[PLAT-8013] YCQ: health check fail for openshift environment
Summary: - Extra `Warning: Cannot create directory at /.cassandra. Command history will not be saved. Please check what was the environment property CQL_HISTORY set to` with line break caused regex match for health check message to fail, since new line is not matched by `.*`, added flag to change this behavior and include newline.

Test Plan: - Verified on openshift universe.

Reviewers: dkumar, vpatibandla, skurapati

Reviewed By: vpatibandla, skurapati

Subscribers: yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24442

--- a/managed/src/main/resources/health/node_health.py.template
+++ b/managed/src/main/resources/health/node_health.py.template
@@ -1156,7 +1156,7 @@ class NodeChecker():
         errors = []
         if not ('Connected to local cluster at {}:{}'
                 .format(self.node, self.ycql_port) in output or
-                re.match(CQL_AUTH_FAILURE_MESSAGE_PATTERN, output)):
+                re.match(CQL_AUTH_FAILURE_MESSAGE_PATTERN, output, flags = re.DOTALL))
             errors = [output]
 
         has_errors = len(errors) > 0
