--- a/managed/src/main/resources/health/node_health.py.template
+++ b/managed/src/main/resources/health/node_health.py.template
@@ -55,8 +55,8 @@ POSTGRES = "postgres"
 ALERT_ENHANCEMENTS_RELEASE_BUILD = "2.6.0.0-b0"
 RELEASE_BUILD_PATTERN = "(\\d+)\\.(\\d+)\\.(\\d+)\\.(\\d+)[-](.+)"
 BUILD_NUMBER_PATTERN = "b(\\d+).*"
-CQL_AUTH_FAILURE_MESSAGE_PATTERN = \
-        ".*AuthenticationFailed\\('Remote end requires authentication\\.?'.*"
+CQL_AUTH_FAILURE_MESSAGE = \
+        "AuthenticationFailed('Remote end requires authentication"
 
 K8S_CERTS_PATH = "/opt/certs/yugabyte/"
 K8S_CERT_FILE_PATH = os.path.join(K8S_CERTS_PATH, "ca.crt")
@@ -1156,7 +1156,7 @@ class NodeChecker():
         errors = []
         if not ('Connected to local cluster at {}:{}'
                 .format(self.node, self.ycql_port) in output or
-                re.match(CQL_AUTH_FAILURE_MESSAGE_PATTERN, output, flags = re.DOTALL))
+                CQL_AUTH_FAILURE_MESSAGE in output):
             errors = [output]
 
         has_errors = len(errors) > 0
