[PLAT-7971] Package installing YBDB with YBA installer
Summary:
This diff packages ybdb installation with yba installer. The feature is currently hidden behind a secret env var "USE_YBDB". So, yba-installer tries to run on ybdb only when postgres.install.enabled=false, postgres.useExisting.enabled=false, YBA_MODE=dev and USE_YBDB=1.

Additionally, yba-installer downloads ybdb package on the fly from download.yugabyte.com during installation to avoid packaging both postgres and ybdb with yba-installer.

Test Plan:
- Tested and ensured that the ybdb changes don't affect the current workflows.
- Validated that yba-installer installs and starts the ybdb service. However, YBA application doesn't start after removing the ybdb compatible migrations from this diff.

Reviewers: sanketh, muthu, dshubin

Reviewed By: dshubin

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24552

--- a/managed/yba-installer/config/templates/yba-installer-platform.yml
+++ b/managed/yba-installer/config/templates/yba-installer-platform.yml
@@ -39,6 +39,15 @@ services:
             pg_dump_path="{{ .PgBin }}/pg_dump"
             pg_restore_path="{{ .PgBin }}/pg_restore"
             {{end}}
+
+            {{if eq (yamlPath "ybdb.install.enabled") "true" }}
+            username="yugabyte"
+            password=""
+            host="localhost"
+            port="{{ yamlPath "ybdb.install.port" }}"
+            dbname="yugaware"
+            {{end}}
+
             username=${?DB_USERNAME}
             password=${?DB_PASSWORD}
             driver="org.postgresql.Driver"
