[PLAT=8296] Put txn atomicity checkbox behind a runtime config feature flag
Summary:
This diff exposes `yb.xcluster.transactional.enabled` as a runtime config.
This diff puts the txn atomicity checkbox behind the above runtime config.
The purpose is to respect the user intention set in `yb.xcluster.transactional.enabled`.

In addition, this diff changes the default value of `yb.xcluster.transactional.enabled` from `true` to `false`.

Test Plan:
Verify that the user is able to modify the `yb.xcluster.transactional.enabled` runtime config from the UI
{F36634}

Verify that the 'Enable transactional atomicity' checkbox is hidden when
`yb.xcluster.transactional.enabled` is false.
{F36632}

Verify that the 'Enable transactional atomicity' checkbox is shown when `yb.xcluster.transactional.enabled`
is true.
{F36633}

Reviewers: hzare, rmadhavan

Reviewed By: rmadhavan

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24525

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -153,7 +153,7 @@ yb {
   xcluster {
     k8s_tls_support = true
     transactional {
-      enabled = true
+      enabled = false
     }
   }
 
@@ -980,7 +980,8 @@ runtime_config {
     "yb.perf_advisor.cleanup.rec_retention_duration",
     "yb.perf_advisor.cleanup.pa_run_retention_duration",
     "yb.node_ui.https.enabled",
-    "yb.attach_detach.enabled"
+    "yb.attach_detach.enabled",
+    "yb.xcluster.transactional.enabled"
   ]
   excluded_paths = [
     # this ws config is in included_objects:
