--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -144,7 +144,7 @@ yb {
   xcluster {
     k8s_tls_support = true
     transactional {
-      enabled = true
+      enabled = false
     }
   }
 
@@ -971,7 +971,8 @@ runtime_config {
     "yb.perf_advisor.cleanup.rec_retention_duration",
     "yb.perf_advisor.cleanup.pa_run_retention_duration",
     "yb.node_ui.https.enabled",
-    "yb.attach_detach.enabled"
+    "yb.attach_detach.enabled",
+    "yb.xcluster.transactional.enabled"
   ]
   excluded_paths = [
     # this ws config is in included_objects:
