[PLAT-8450] Fix perf advisor scan during backup
Summary: Allow perf advisor runs during backup operation.

Test Plan:
Try starting backup and then perf advisor run - perf advisor run is successful.
Try starting universe edit operation and then perf advisor run - perf advisor run fails.

Reviewers: rmadhavan

Reviewed By: rmadhavan

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24604

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -23,6 +23,8 @@ play.forms.binding.directFieldAccess=true
 kamon.instrumentation.logback.mdc.copy.enabled=false
 
 akka {
+  # On slow machines we sometimes see that logger is not able to start in 5 secs
+  logger-startup-timeout=30s
   actor {
     default-dispatcher {
       type = "com.yugabyte.yw.common.logging.MDCPropagatingDispatcherConfigurator"
