[BACKPORT 2.16][#16964] docdb: Compilation failure for Apple clang 14.0.3
Summary:
Original commit: ddb559912dfc95a227f12b4ccc8cf99111f5431a / D24644

Compilation is failing on clang 14.0.3 with the following message
```
/-------------------------------------------------------------------------------
| COMPILATION FAILED
|-------------------------------------------------------------------------------
build/debug-clang-dynamic-ninja/src/yb/yql/cql/ql/parser/parser_gram.y.cc:10916:9: error: variable 'yynerrs_' set but not used [-Werror,-Wunused-but-set-variable]
    int yynerrs_ = 0;
        ^
1 error generated.

Input files:
  src/yb/yql/cql/ql/parser/CMakeFiles/ql_parser.dir/parser_gram.y.final.cc.o
  build/debug-clang-dynamic-ninja/src/yb/yql/cql/ql/parser/parser_gram.y.final.cc
Output file (from -o): src/yb/yql/cql/ql/parser/CMakeFiles/ql_parser.dir/parser_gram.y.final.cc.o
\-------------------------------------------------------------------------------
```

The diff fixes this error

Test Plan: Jenkins: compile only

Reviewers: mbautin

Reviewed By: mbautin

Subscribers: ybase

Differential Revision: https://phabricator.dev.yugabyte.com/D24676

--- a/src/postgres/CMakeLists.txt
+++ b/src/postgres/CMakeLists.txt
@@ -25,11 +25,12 @@ if(IS_GCC AND "${COMPILER_VERSION}" VERSION_GREATER "8.0")
 endif()
 
 if(IS_CLANG)
-  if("${COMPILER_VERSION}" VERSION_GREATER_EQUAL "13.0.0" AND NOT APPLE)
+  if("${COMPILER_VERSION}" VERSION_GREATER_EQUAL "14.0.0")
     string(APPEND POSTGRES_EXTRA_C_CXX_FLAGS " -Wno-error=unused-but-set-variable")
   endif()
 
-  if("${COMPILER_VERSION}" VERSION_GREATER_EQUAL "15.0.0")
+  if(("${COMPILER_VERSION}" VERSION_GREATER_EQUAL "15.0.0") OR
+     (APPLE AND "${COMPILER_VERSION}" VERSION_GREATER_EQUAL "14.0.3"))
     string(APPEND POSTGRES_EXTRA_C_CXX_FLAGS " -Wno-error=deprecated-non-prototype")
   endif()
 endif()
