--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -123,7 +123,7 @@ yb {
     show_cost=true
 
     feature_flags {
-      perf_advisor=false
+      perf_advisor=true
       k8s_custom_resources=false
       provider_redesign=false
     }
