[PLAT-6348] Correcting filepaths for yba-installer migration.
Summary:
During migration of existing YBA installs to YBA-installer setups the filepaths for existing
resources like access keys or certificates can change locations. Because of this, we need to do some
fixup on startup to replace the old storage path with the new storage path. This diff corrects the
filepaths for access keys, certificates, YBDB/YBC releases, and customer licenses.

Test Plan:
Ensure no-op on existing platform setup and correct filepaths are logged to be replaced.
Ensure new releases can be imported because of version pattern change.
End to end restore of yugabundle -> yba-installer where storage path actually changes (WIP).

Reviewers: sanketh, dshubin, cwang, svarshney

Reviewed By: dshubin, cwang, svarshney

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23926

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -109,6 +109,7 @@ yb {
   grafana.accessKey="changeme"
   allow_db_version_more_than_yba_version=false
   kubernetesOperator.enabled=false
+  fixPaths=false
 
   regex {
     release_pattern {
