[BACKPORT 2.18][PLAT-6348] Restoring yugabundle backup to yba-installer
Summary:
Diff that edits yb_platform_backup.sh to accept a yugabundle backup and restore it to a
yba-installer installation. The backup script moves data files like keys, certs, and releases to the
right path before restarting YBA with the fixPaths conf variable set. This, along with
https://phabricator.dev.yugabyte.com/D23926, will allow Yugabundle to restore to YBA-installer. Also
requires a pg_restore version on the YBA node that is compatible with how the dump was taken (>=
pg_dump version of input backup).

During migration of existing YBA installs to YBA-installer setups the filepaths for existing
resources like access keys or certificates can change locations. Because of this, we need to do some
fixup on startup to replace the old storage path with the new storage path. This diff corrects the
filepaths for access keys, certificates, YBDB/YBC releases, and customer licenses.

Original commit: bca2c68d6c90ed12deba2a2d5724bcf7bd167a94 / D23926
                 6fda86dc65a2ba787a036c3172159ea654b8763d / D24350

Test Plan:
Restore a 2.17.3 yugabundle to 2.19 yba-installer build replaced with the yugaware package built
with the filepath fix up diff.

Ensure no-op on existing platform setup and correct filepaths are logged to be replaced.
Ensure new releases can be imported because of version pattern change.
End to end restore of yugabundle -> yba-installer where storage path actually changes (WIP).

Reviewers: sanketh, cwang, svarshney, dshubin

Reviewed By: dshubin

Subscribers: yugaware, jenkins-bot

Differential Revision: https://phabricator.dev.yugabyte.com/D24699

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -108,6 +108,7 @@ yb {
   devops.home = ""
   thirdparty.packagePath = /opt/third-party
   grafana.accessKey="changeme"
+  fixPaths=false
 
   docker {
     network = "bridge"
