[BACKPORT 2.18][#13488] xCluster: Create index in transactionally consistent xCluster
Summary:
Original commit: 459d78e0eb6934a46c6530650375d3a2c6c22136 / D23313
The new Create Index user workflow will involve the following 4 steps:
1. Run Create Index DDL on producer (ACTIVE) cluster.
2. Wait for the Create index to complete successfully. If it fails due to any constraint violation then Drop the index and abort the workflow.
3. Run the same Create Index DDL on the consumer cluster.
4. Wait for the Create index to complete successfully. If it fails due to any constraint violation then Drop the index.
On completion the index on consumer will be automatically added to replication and transactionally consistent.

As part of step4 Consumer master will perform the following steps at the CreateTable time (before IsCreateTableDone returns true) if the indexed table is part of a transactional xCluster replication and cluster role is STANDBY:
1. Bootstrap producer via the index table name and get the BootstrapId, ProducerTableId, BootstrapTime
2. Add the index to the same replication group as the indexed table
3. Compute xCluster SafeTime on the new relication group, and then wait for it to advance beyond the BootstrapTime

In order to achieve this:
 - Added a new BootstrapProducer RPC to master_replication. This RPC will accept a list of tables by name and output their tableId, bootstrapId and boostrapTime.
 - GetTableInfoFromNamespaceNameAndTableName now works with YSQL tables by scanning every TableInfo to get the required table.
 - TabletPeer::GetCdcBootstrapOpIdByTableType now computes the boostrap_time after getting the OpId and AbortingTransactions. This is sent back via GetLatestEntryOpIdResponsePB and the max bootstrapTime over all tablets is computed and sent via BootstrapProducerResponsePB
 - CatalogManager::DeleteTableInternal will now remove tables from repication. This is needed since we are adding index to replication automatically, we should also remove it au

--- a/src/yb/integration-tests/CMakeLists.txt
+++ b/src/yb/integration-tests/CMakeLists.txt
@@ -197,6 +197,7 @@ ADD_YB_TEST(xcluster_dr-itest)
 ADD_YB_TEST(transaction-test)
 ADD_YB_TEST(encryption-test)
 ADD_YB_TEST(secure_connection_test)
+ADD_YB_TEST(xcluster/xcluster_ysql_index-test)
 
 set(YB_TEST_LINK_LIBS_SAVED ${YB_TEST_LINK_LIBS})
 set(YB_TEST_LINK_LIBS ${YB_TEST_LINK_LIBS} cassandra)
