[PLAT-8537]: Turn on Perf Advisor runtime config to true by default
Summary: Turn on Perf Advisor runtime config to true by default

Test Plan: Turn on Perf Advisor runtime config to true by default

Reviewers: jmak, nbhatia

Reviewed By: jmak, nbhatia

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24691

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -130,7 +130,7 @@ yb {
     show_cost=true
 
     feature_flags {
-      perf_advisor=false
+      perf_advisor=true
       k8s_custom_resources=false
       provider_redesign=false
     }
