[#16849] docdb: Tablet splitting: Lower the thresholds for splits on low core machines
Summary:
As per internal discussion, we may want to avoid too many pre-split tablets in case of significant
amount of nodes with low number of cores (<4). We have several customers who has universes with more
than 9 nodes and 60% of them have 2 or 4 cores only.  Such configuration gives number of tablets
equal to the number of the nodes with automatic tablet splitting enabled. But a customer may want
to start with lower number of tablets in this case (automatic tablet splitting).
So, the fix addresses the described situation and adds a new policy to determine the number of
tablets in case of related gflags are kept with default values: if gflags are default and automatic
tablet splitting is enabled and (a) the number of cores <= 2 then the number of tablets is
determined as 1 and (b) if the number of cores <= 4 then  the number of tablets is determined as 2.
The new values were discussed internally also.

Additionally the diff changes FLAGS_yb_num_shards_per_tserver and
FLAGS_ysql_num_shards_per_tserver to be a runtime flags.
Jira Issue(s): DB-6196

Test Plan: Jenkins

Reviewers: timur, rthallam

Reviewed By: timur, rthallam

Subscribers: bogdan, ybase, xCluster

Differential Revision: https://phabricator.dev.yugabyte.com/D24803

--- a/src/yb/common/CMakeLists.txt
+++ b/src/yb/common/CMakeLists.txt
@@ -78,6 +78,7 @@ set(COMMON_SRCS
   colocated_util.cc
   common_flags.cc
   common_types_util.cc
+  common_util.cc
   consistent_read_point.cc
   entity_ids.cc
   hybrid_time.cc
