--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -149,6 +149,16 @@ yb {
     transactional {
       enabled = false
     }
+    is_bootstrap_required_rpc_pool {
+        # initial and minimum number of threads used by live node poller
+        core_threads = 10
+        # max number of threads we will grow to if needed before starting to reject tasks
+        max_threads = 50
+        # duration for which thread pool will stay inflated before it shrinks back to core_threads
+        thread_ttl = 1 minute
+        # capacity of the thread pool queue
+        queue_capacity = 1000
+    }
   }
 
   # Enable/Disable Runtime Config UI under Admin section
