[#17003] DocDB: Use ReaderProjection by DocRowwiseIterator
Summary:
When read is performed we create schema projection to reflect columns requested by the user.
But actually read path does not require all column related data, it just needs column id and ql type.
We already have ReaderProjection that stores just this data, and it is used by DocDBTableReader.

Also DocRowwiseIterator decodes values for all key columns in case of YCQL. Even when projection does not contain those columns. Actually key columns required in some scenarios, even when they were not requested by the user.
But we could transfer decision on whether we should decode those keys or not to appropriate places in code, instead of always reading them.

This diff changes DocRowwiseIterator to use ReaderProjection instead of full schema.
Also this ReaderProjection contains all columns that should be read.

It is preparation diff for upcoming read improvements, since using separate ReaderProjection allows us to store data related only to read.
For instance we could store columns orderer as in schema, that is required by our doc reader, but also store column index in read output.
While schema does not have such extra index.

Test Plan: Jenkins

Reviewers: timur, arybochkin

Reviewed By: timur, arybochkin

Subscribers: ybase, bogdan

Differential Revision: https://phabricator.dev.yugabyte.com/D24607

--- a/src/yb/dockv/CMakeLists.txt
+++ b/src/yb/dockv/CMakeLists.txt
@@ -38,6 +38,7 @@ set(DOCKV_SRCS
     partition.cc
     primitive_value.cc
     primitive_value_util.cc
+    reader_projection.cc
     schema_packing.cc
     subdocument.cc
     value.cc
