[#15644] YSQL: Add flag to run Postgres under Valgrind
Summary:
This revision adds a `--valgrind-path` flag to yb_build, which disables TCMalloc
and builds yugabyte so that all postgres processes are run with the valgrind executable
specified by the flag.

When logging to file, valgrind logs are stored with the Tserver logs.

Currently, to use valgrind, it must be manually installed. Valgrind must be
at version 3.20.0 or later, due to DWARF5 support issues. Additionally,
valgrind's header files must also be present; if they are installed in an
atypical location, add the folder that includes valgrind/valgrind.h to CPATH.

Test Plan:
`./yb_build.sh --no-tcmalloc --valgrind-path /path/to/valgrind`

`./bin/yb-ctl start --tserver_flags "yb_enable_valgrind=1"`

Reviewers: smishra, ssong, tvesely

Reviewed By: ssong, tvesely

Differential Revision: https://phabricator.dev.yugabyte.com/D23939

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -744,6 +744,18 @@ elseif(NOT APPLE)
   ADD_LINKER_FLAGS("-Wl,--no-undefined -Wl,--no-allow-shlib-undefined")
 endif()
 
+if (NOT "$ENV{YB_VALGRIND_PATH}" STREQUAL "")
+  if(APPLE)
+    message(FATAL_ERROR "Valgrind cannot be used in macOS.")
+  endif()
+
+  if ("${YB_TCMALLOC_ENABLED}" STREQUAL "1")
+    message(FATAL_ERROR "Valgrind cannot be used while TCMalloc is enabled. "
+            "Build with --no-tcmalloc to use Valgrind.")
+  endif()
+  ADD_CXX_FLAGS("-DYB_VALGRIND_PATH=$ENV{YB_VALGRIND_PATH}")
+endif()
+
 ############################################################
 # Linker setup
 ############################################################
