--- a/build-support/thirdparty_archives.yml
+++ b/build-support/thirdparty_archives.yml
@@ -1,100 +1,100 @@
-sha_for_local_checkout: 350f06229bf67b45360a24872168fbfce758798c
+sha_for_local_checkout: b703b42e2bac6749482f87705d10fb6c4467f9bf
 archives:
   - os_type: almalinux8
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type:
-    tag: v20230316131303-350f06229b-almalinux8-x86_64-clang15
+    tag: v2.17.3-20230427225600-b703b42e2b-almalinux8-x86_64-clang15
   - os_type: almalinux8
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: true
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type:
-    tag: v20230316131345-350f06229b-almalinux8-x86_64-clang15-linuxbrew
+    tag: v2.17.3-20230427225504-b703b42e2b-almalinux8-x86_64-clang15-linuxbrew
   - os_type: almalinux8
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: true
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type: full
-    tag: v20230316131259-350f06229b-almalinux8-x86_64-clang15-linuxbrew-full-lto
+    tag: v2.17.3-20230427225509-b703b42e2b-almalinux8-x86_64-clang15-linuxbrew-full-lto
   - os_type: almalinux8
     architecture: x86_64
     compiler_type: gcc11
     is_linuxbrew: false
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type:
-    tag: v20230316131258-350f06229b-almalinux8-x86_64-gcc11
+    tag: v2.17.3-20230427225518-b703b42e2b-almalinux8-x86_64-gcc11
   - os_type: centos7
     architecture: aarch64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type:
-    tag: v20230316131415-350f06229b-centos7-aarch64-clang15
+    tag: v2.17.3-20230428034902-b703b42e2b-centos7-aarch64-clang15
   - os_type: centos7
     architecture: aarch64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type: full
-    tag: v20230316131339-350f06229b-centos7-aarch64-clang15-full-lto
+    tag: v2.17.3-20230428034837-b703b42e2b-centos7-aarch64-clang15-full-lto
   - os_type: centos7
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type:
-    tag: v20230316131345-350f06229b-centos7-x86_64-clang15
+    tag: v2.17.3-20230427225603-b703b42e2b-centos7-x86_64-clang15
   - os_type: centos7
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type: full
-    tag: v20230316131345-350f06229b-centos7-x86_64-clang15-full-lto
+    tag: v2.17.3-20230427225633-b703b42e2b-centos7-x86_64-clang15-full-lto
   - os_type: centos7
     architecture: x86_64
     compiler_type: gcc11
     is_linuxbrew: false
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type:
-    tag: v20230316131318-350f06229b-centos7-x86_64-gcc11
+    tag: v2.17.3-20230427225557-b703b42e2b-centos7-x86_64-gcc11
   - os_type: macos
     architecture: arm64
     compiler_type: clang
     is_linuxbrew: false
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type:
-    tag: v20230320012217-350f06229b-macos-arm64
+    tag: v2.17.3-20230428073654-b703b42e2b-macos-arm64
   - os_type: macos
     architecture: x86_64
     compiler_type: clang
     is_linuxbrew: false
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type:
-    tag: v20230316131337-350f06229b-macos-x86_64
+    tag: v2.17.3-20230427225637-b703b42e2b-macos-x86_64
   - os_type: ubuntu20.04
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type:
-    tag: v20230316131308-350f06229b-ubuntu2004-x86_64-clang15
+    tag: v2.17.3-20230427225521-b703b42e2b-ubuntu2004-x86_64-clang15
   - os_type: ubuntu22.04
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type:
-    tag: v20230316131256-350f06229b-ubuntu2204-x86_64-clang15
+    tag: v2.17.3-20230427225510-b703b42e2b-ubuntu2204-x86_64-clang15
   - os_type: ubuntu22.04
     architecture: x86_64
     compiler_type: gcc11
     is_linuxbrew: false
-    sha: 350f06229bf67b45360a24872168fbfce758798c
+    sha: b703b42e2bac6749482f87705d10fb6c4467f9bf
     lto_type:
-    tag: v20230316131259-350f06229b-ubuntu2204-x86_64-gcc11
+    tag: v2.17.3-20230427225557-b703b42e2b-ubuntu2204-x86_64-gcc11
