--- a/build-support/thirdparty_archives.yml
+++ b/build-support/thirdparty_archives.yml
@@ -1,100 +1,100 @@
-sha_for_local_checkout: dcd63f052130915470e2f83c1435b8b464dd03cb
+sha_for_local_checkout: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
 archives:
   - os_type: almalinux8
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type:
-    tag: v20230329193144-dcd63f0521-almalinux8-x86_64-clang15
+    tag: v2.18-20230428053342-56a99aae9c-almalinux8-x86_64-clang15
   - os_type: almalinux8
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: true
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type:
-    tag: v20230329193138-dcd63f0521-almalinux8-x86_64-clang15-linuxbrew
+    tag: v2.18-20230428053335-56a99aae9c-almalinux8-x86_64-clang15-linuxbrew
   - os_type: almalinux8
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: true
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type: full
-    tag: v20230329193215-dcd63f0521-almalinux8-x86_64-clang15-linuxbrew-full-lto
+    tag: v2.18-20230428053359-56a99aae9c-almalinux8-x86_64-clang15-linuxbrew-full-lto
   - os_type: almalinux8
     architecture: x86_64
     compiler_type: gcc11
     is_linuxbrew: false
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type:
-    tag: v20230329193133-dcd63f0521-almalinux8-x86_64-gcc11
+    tag: v2.18-20230428053334-56a99aae9c-almalinux8-x86_64-gcc11
   - os_type: centos7
     architecture: aarch64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type:
-    tag: v20230329193220-dcd63f0521-centos7-aarch64-clang15
+    tag: v2.18-20230428104108-56a99aae9c-centos7-aarch64-clang15
   - os_type: centos7
     architecture: aarch64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type: full
-    tag: v20230329193213-dcd63f0521-centos7-aarch64-clang15-full-lto
+    tag: v2.18-20230428104151-56a99aae9c-centos7-aarch64-clang15-full-lto
   - os_type: centos7
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type:
-    tag: v20230329193149-dcd63f0521-centos7-x86_64-clang15
+    tag: v2.18-20230428053421-56a99aae9c-centos7-x86_64-clang15
   - os_type: centos7
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type: full
-    tag: v20230329193143-dcd63f0521-centos7-x86_64-clang15-full-lto
+    tag: v2.18-20230428053506-56a99aae9c-centos7-x86_64-clang15-full-lto
   - os_type: centos7
     architecture: x86_64
     compiler_type: gcc11
     is_linuxbrew: false
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type:
-    tag: v20230329193153-dcd63f0521-centos7-x86_64-gcc11
+    tag: v2.18-20230428053421-56a99aae9c-centos7-x86_64-gcc11
   - os_type: macos
     architecture: arm64
     compiler_type: clang
     is_linuxbrew: false
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type:
-    tag: v20230330145759-dcd63f0521-macos-arm64
+    tag: v2.18-20230428132034-56a99aae9c-macos-arm64
   - os_type: macos
     architecture: x86_64
     compiler_type: clang
     is_linuxbrew: false
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type:
-    tag: v20230329193252-dcd63f0521-macos-x86_64
+    tag: v2.18-20230428053422-56a99aae9c-macos-x86_64
   - os_type: ubuntu20.04
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type:
-    tag: v20230329193134-dcd63f0521-ubuntu2004-x86_64-clang15
+    tag: v2.18-20230428053337-56a99aae9c-ubuntu2004-x86_64-clang15
   - os_type: ubuntu22.04
     architecture: x86_64
     compiler_type: clang15
     is_linuxbrew: false
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type:
-    tag: v20230329193132-dcd63f0521-ubuntu2204-x86_64-clang15
+    tag: v2.18-20230428053355-56a99aae9c-ubuntu2204-x86_64-clang15
   - os_type: ubuntu22.04
     architecture: x86_64
     compiler_type: gcc11
     is_linuxbrew: false
-    sha: dcd63f052130915470e2f83c1435b8b464dd03cb
+    sha: 56a99aae9c7b432925b21a8c0809fe8eee74b5cf
     lto_type:
-    tag: v20230329193145-dcd63f0521-ubuntu2204-x86_64-gcc11
+    tag: v2.18-20230428053434-56a99aae9c-ubuntu2204-x86_64-gcc11
