--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -806,18 +806,14 @@ yb {
     max_parallel_upgrades = 30
 
     client {
-        enabled = false
-    }
-
-    server {
-        install = false
+        enabled = true
     }
 
     live_node_poller {
         # initial and minimum number of threads used by live node poller
         core_threads = 10
         # max number of threads we will grow to if needed before starting to reject tasks
-        max_threads = 50
+        max_threads = 100
         # duration for which thread pool will stay inflated before it shrinks back to core_threads
         thread_ttl = 1 minute
         # capacity of the thread pool queue
