--- a/src/yb/tools/CMakeLists.txt
+++ b/src/yb/tools/CMakeLists.txt
@@ -172,6 +172,10 @@ target_link_libraries(admin-test-base cql_test_util integration-tests yb_test_ut
 add_library(tools_test_utils tools_test_utils.cc)
 target_link_libraries(tools_test_utils yb_util yb_test_util)
 
+add_library(test_admin_client test_admin_client.cc)
+target_link_libraries(test_admin_client master_proto integration-tests)
+
+
 set(YB_TEST_LINK_LIBS
   admin-test-base
   ysck
@@ -183,6 +187,7 @@ set(YB_TEST_LINK_LIBS
   yb_docdb_test_common
   ql_util
   ql-dml-test-base
+  test_admin_client
   tools_test_utils
   ${YB_MIN_TEST_LIBS})
 ADD_YB_TEST(ysck-test)
