[#14392] YSQL: Fix ysql dependencies
Summary:
There are ybc_util.{h,cc} and ybc-internal.{h,cc} in yb/common library.
But functions and variables from appropriate headers makes sense only in context of postgres process.
Moved those files to pggate/util library.

Also moved pgsql_webserver_wrapper.{h,cc} to pggate/webserver library, since it was using ybc_util.h.
But this wrapper is used only by postgress metrics facility.

Also removed calls to initdb from yb-ctl.
For a long time initdb just fails during startup, because it cannot work without shared memory block.
And we already use another approach to actually initialise db.
Jira Issue(s): DB-3811

Test Plan: Jenkins

Reviewers: dmitry, smishra, mihnea

Reviewed By: dmitry

Subscribers: ybase, bogdan

Differential Revision: https://phabricator.dev.yugabyte.com/D24942

--- a/src/yb/yql/pggate/webserver/CMakeLists.txt
+++ b/src/yb/yql/pggate/webserver/CMakeLists.txt
@@ -13,18 +13,17 @@
 
 set(YB_PCH_PATH ../)
 
-set(PGGATE_UTIL_SRCS
-    pg_wire.cc
-    pg_doc_data.cc
-    pg_tuple.cc
-    ybc_util.cc
-    ybc-internal.cc
+set(PGGATE_WEBSERVER_SRCS
+    pgsql_webserver_wrapper.cc
     )
 
-set(PGGATE_UTIL_LIBS
+set(PGGATE_WEBSERVER_LIBS
+    server_process
+    yb_common
+    yb_pggate_util
     yb_util
-    yb_common)
+    )
 
-ADD_YB_LIBRARY(yb_pggate_util
-               SRCS ${PGGATE_UTIL_SRCS}
-               DEPS ${PGGATE_UTIL_LIBS})
+ADD_YB_LIBRARY(yb_pggate_webserver
+               SRCS ${PGGATE_WEBSERVER_SRCS}
+               DEPS ${PGGATE_WEBSERVER_LIBS})
