--- a/managed/devops/opscli/ybops/data/azu-metadata.yml
+++ b/managed/devops/opscli/ybops/data/azu-metadata.yml
@@ -67,7 +67,7 @@ regions:
   eastasia:
     cidr_prefix: "10.25"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
-    zones: []
+    zones: ['1','2','3']
   northcentralus:
     cidr_prefix: "10.26"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
@@ -83,7 +83,7 @@ regions:
   brazilsouth:
     cidr_prefix: "10.29"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
-    zones: []
+    zones: ['1','2','3']
   australiasoutheast:
     cidr_prefix: "10.30"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
@@ -91,7 +91,7 @@ regions:
   centralindia:
     cidr_prefix: "10.31"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
-    zones: []
+    zones: ['1','2','3']
   southindia:
     cidr_prefix: "10.33"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
@@ -115,7 +115,7 @@ regions:
   koreacentral:
     cidr_prefix: "10.38"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
-    zones: []
+    zones: ['1','2','3']
   koreasouth:
     cidr_prefix: "10.39"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
@@ -127,15 +127,15 @@ regions:
   southafricanorth:
     cidr_prefix: "10.41"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
-    zones: []
+    zones: ['1','2','3']
   uaenorth:
     cidr_prefix: "10.42"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
-    zones: []
+    zones: ['1','2','3']
   switzerlandnorth:
     cidr_prefix: "10.43"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
-    zones: []
+    zones: ['1','2','3']
   germanywestcentral:
     cidr_prefix: "10.44"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
@@ -143,7 +143,11 @@ regions:
   norwayeast:
     cidr_prefix: "10.45"
     image: "OpenLogic:CentOS:7_9:7.9.2022020700"
-    zones: []
+    zones: ['1','2','3']
+  westus3:
+    cidr_prefix: "10.46"
+    image: "OpenLogic:CentOS:7_9:7.9.2022020700"
+    zones: ['1','2','3']
 
 
 credential_vars: ['AZURE_CLIENT_ID', 'AZURE_CLIENT_SECRET', 'AZURE_TENANT_ID',
