--- a/src/yb/yql/pggate/util/CMakeLists.txt
+++ b/src/yb/yql/pggate/util/CMakeLists.txt
@@ -16,10 +16,7 @@ set(YB_PCH_PATH ../)
 set(PGGATE_UTIL_SRCS
     pg_wire.cc
     pg_doc_data.cc
-    pg_tuple.cc
-    ybc_util.cc
-    ybc-internal.cc
-    )
+    pg_tuple.cc)
 
 set(PGGATE_UTIL_LIBS
     yb_util
